<resources>
    <string name="app_name">HabitTracker</string>
    <string name="timer_page">Timer</string>
    <string name="water_page">Water</string>
    <string name="workouts_page">Workouts</string>
    <string name="back_button">Back</string>
    <string name="change_timer">Change Timer</string>
    <string name="timer_default">0.00 seconds</string>
    <string name="timer_toggle_start">Start</string>
    <string name="timer_toggle_stop">Stop</string>
    <string name="timer_toggle_lap">Lap</string>
    <string name="timer_toggle_clear">Clear</string>
    <string name="water_default">0ml</string>
    <string name="small_glass">220ml</string>
    <string name="medium_glass">250ml</string>
    <string name="large_glass">500ml</string>
    <string name="half_pint">½ pint</string>
    <string name="pint">pint</string>
    <string name="custom_amount">ml?</string>
    <string name="confirm">Submit</string>
    <string name="workouts_default">Okcal burned</string>
    <string name="custom_weight">Approx weight in KG?</string>
    <string name="custom_met">Approx MET of activity?</string>
    <string name="custom_minutes">Time spent in Minutes?</string>
</resources>