<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="213dp"
        android:layout_marginEnd="165dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/workouts"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="106dp"
        android:layout_marginBottom="342dp"
        android:text="@string/workouts_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/water"
        app:layout_constraintStart_toEndOf="@+id/timer"
        app:layout_constraintTop_toBottomOf="@+id/app_name"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/water"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="36dp"
        android:text="@string/water_page"
        app:layout_constraintBottom_toBottomOf="@+id/workouts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/workouts"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:text="@string/timer_page"
        app:layout_constraintBottom_toBottomOf="@+id/workouts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/workouts"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>